--- a/css/index.css
+++ b/css/index.css
@@ -568,8 +568,17 @@ body {
   float: left;
 }
 
-.row-a {
-  padding-left: .1rem;
+.swiper-inner {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0 .055rem;
+}
+
+.swiper-inner .swiper-col-inner {
+  width: 50%;
+  box-sizing: border-box;
+  padding: 0 .055rem;
+  float: left;
 }
 
 a .t {
@@ -604,13 +613,13 @@ a .t .wrap .des {
   font-size: .132rem;
 }
 
-.row-a .hor-view::after {
+.swiper-col-inner::after, .hor-view::after {
   content: '';
   display: block;
   clear: both;
 }
 
-.row-a .hor-view .b1 {
+.swiper-col-inner .b1, .hor-view .b1 {
   opacity: .8;
   float: left;
   margin: .01rem;
@@ -618,18 +627,18 @@ a .t .wrap .des {
   height: 1.26rem;
 }
 
-.row-a .hor-view .b1 img {
+.swiper-col-inner .b1 img, .hor-view .b1 img {
   border: 1px solid #ddd;
   display: block;
 }
 
-.row-a .hor-view .b2 {
+.swiper-col-inner .b2, .hor-view .b2 {
   opacity: .8;
   float: left;
   width: .615rem;
 }
 
-.row-a .hor-view .b2 img {
+.swiper-col-inner .b2 img, .hor-view .b2 img {
   border: 1px solid #ddd;
   margin: .005rem;
 }
@@ -641,4 +650,54 @@ a .t .wrap .des {
   background-color: #fff;
   position: relative;
   bottom: 1px;
+}
+
+.guessulike {
+  float: left;
+  width: 100%;
+  height: .22rem;
+  text-align: center;
+  position: relative;
+  margin: .138rem 0;
+}
+
+.guessulike::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 1px;
+  background: #dcdcdc;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+}
+
+.guessulike .title {
+  display: inline-block;
+  font-size: .187rem;
+  line-height: .281rem;
+  color: #353d44;
+  background-color: #f2f2f2;
+  padding-right: .11rem;
+  padding-left: .36rem;
+  position: relative;
+  z-index: 2;
+}
+
+.guessulike .title .cai-icon {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: .11rem;
+  display: inline-block;
+  width: .22rem;
+  height: .22rem;
+  border-radius: 50%;
+  background: url("../image/xin.png") no-repeat center center;
+  background-color: #c4c4c4;
+  background-size: .15rem;
 }
