--- a/css/index.scss
+++ b/css/index.scss
@@ -490,8 +490,16 @@ $img:'../image/';
   width:100%;
   float: left;
 }
-.row-a{
-  padding-left:.1rem;
+.swiper-inner{
+  width:100%;
+  box-sizing: border-box;
+  padding:0 .055rem;
+  .swiper-col-inner{
+    width:50%;
+    box-sizing: border-box;
+    padding:0 .055rem;
+    float: left;
+  }
 }
 a .t{
   height:.7rem;
@@ -520,7 +528,7 @@ a .t{
     }
   }
 }
-.row-a .hor-view{
+.swiper-col-inner,.hor-view{
   &::after{
     content:'';
     display: block;
@@ -554,5 +562,51 @@ a .t{
   background-color: #fff;
   position: relative;
   bottom:1px;
+}
+.guessulike{
+  float:left;
+  width:100%;
+  height:.22rem;
+  text-align: center;
+  position: relative;
+  margin: .138rem 0;
+  &::after{
+    content: '';
+    display: block;
+    width:100%;
+    height:1px;
+    background: #dcdcdc;
+    position: absolute;
+    margin:auto;
+    top:0;
+    bottom:0;
+    left:0;
+    z-index: 0;
+  }
+  .title{
+    display: inline-block;
+    font-size: .187rem;
+    line-height: .281rem;
+    color:#353d44;
+    background-color: #f2f2f2;
+    padding-right:.11rem;
+    padding-left:.36rem;
+    position: relative;
+    z-index: 2;
+    .cai-icon{
+      position: absolute;
+      margin: auto;
+      top:0;
+      bottom:0;
+      left:.11rem;
+      display: inline-block;
+      width:.22rem;
+      height:.22rem;
+      border-radius: 50%;
+      background: url($img+'xin.png') no-repeat center center;
+      background-color: #c4c4c4;
+      background-size:.15rem;
 
+    }
+  }
 }
