--- a/css/index.scss
+++ b/css/index.scss
@@ -537,18 +537,17 @@ a .t{
   .b1{
     opacity: .8;
     float: left;
-    margin:.01rem;
-    width:1.24rem;
-    height:1.26rem;
+    width:66.66%;
     img{
       border:1px solid #ddd;
       display: block;
+      margin:.01rem;
     }
   }
   .b2{
     opacity: .8;
     float: left;
-    width:.615rem;
+    width:33.33%;
     img{
       border:1px solid #ddd;
       margin: .005rem;
