--- a/css/index.scss
+++ b/css/index.scss
@@ -529,6 +529,7 @@ a .t{
   }
 }
 .swiper-col-inner,.hor-view{
+  position: relative;
   &::after{
     content:'';
     display: block;
@@ -536,7 +537,6 @@ a .t{
   }
   .b1{
     opacity: .8;
-    float: left;
     width:66.66%;
     img{
       border:1px solid #ddd;
@@ -546,8 +546,11 @@ a .t{
   }
   .b2{
     opacity: .8;
-    float: left;
+    float: right;
     width:33.33%;
+    position: absolute;
+    top:0;
+    right:0;
     img{
       border:1px solid #ddd;
       margin: .005rem;
@@ -605,7 +608,22 @@ a .t{
       background: url($img+'xin.png') no-repeat center center;
       background-color: #c4c4c4;
       background-size:.15rem;
-
+    }
+  }
+}
+/* 猜你喜欢*/
+.guessulikeCon{
+  width:100%;
+  float: left;
+  padding:0 .096rem;
+  box-sizing: border-box;
+  .pro-list{
+    list-style: none;
+    padding:0;
+    li{
+      padding:0 .096rem;
+      width:50%;
+      box-sizing: border-box;
     }
   }
 }
