--- a/css/index.scss
+++ b/css/index.scss
@@ -2,57 +2,57 @@ html{
   font-size: 200px;
 }
 @media screen and (min-width: 320px) {
-    html {
-        font-size:77px
-   }
+  html {
+    font-size:77px
+  }
 }
 
 @media screen and (min-width: 360px) {
-    html {
-        font-size:87px
-    }
+  html {
+    font-size:87px
+  }
 }
 
 @media screen and (min-width: 375px) {
-    html {
-        font-size:90px
-    }
+  html {
+    font-size:90px
+  }
 }
 
 @media screen and (min-width: 384px) {
-    html {
-        font-size:92px
-    }
+  html {
+    font-size:92px
+  }
 }
 
 @media screen and (min-width: 400px) {
-    html {
-        font-size:96px
-    }
+  html {
+    font-size:96px
+  }
 }
 
 @media screen and (min-width: 414px) {
-    html {
-        font-size:100px
-    }
+  html {
+    font-size:100px
+  }
 }
 
 @media screen and (min-width: 424px) {
-    html {
-        font-size:102px
-    }
+  html {
+    font-size:102px
+  }
 }
 
 @media screen and (min-width: 480px) {
-    html {
-        font-size:115px
-    }
+  html {
+    font-size:115px
+  }
 }
 
 @media screen and (min-width: 540px) {
-    html {
-        font-size:141px
-    }
+  html {
+    font-size:141px
+  }
 }
 body{
   min-width: 320px;
@@ -162,7 +162,7 @@ $img:'../image/';
   opacity:1;
 }
 .swiper-pagination-bullet-active{
-   background: #ffc001;
+  background: #ffc001;
 }
 .swipe{
   border-bottom:1px solid #f2f2f2;
@@ -384,9 +384,9 @@ $img:'../image/';
             background-size: 0.39rem 0.41rem;
             padding-left:.05rem;
             i{
-                font-style: normal;
-                letter-spacing: -.05rem;
-                color:#fff;
+              font-style: normal;
+              letter-spacing: -.05rem;
+              color:#fff;
             }
             .f1{
               font-size:.16rem;
@@ -417,7 +417,7 @@ $img:'../image/';
 }
 
 .clear-margin{
-    margin:0 -15px;
+  margin:0 -15px;
 }
 .v5-swipe,.sm-left{
   a{
@@ -454,8 +454,8 @@ $img:'../image/';
 }
 /* 超实惠*/
 .wapsy{
-   margin-top: .12rem;
-   border-bottom:1px solid transparent;
+  margin-top: .12rem;
+  border-bottom:1px solid transparent;
 }
 .vertical{
   position: absolute;
@@ -467,9 +467,9 @@ $img:'../image/';
   z-index: 2;
 }
 .sh-inner a{
-    border-bottom:1px solid #f2f2f2;
-    position: relative;
-  }
+  border-bottom:1px solid #f2f2f2;
+  position: relative;
+}
 /* 生活家*/
 .shj{
   border-bottom:1px solid #f2f2f2;
@@ -563,6 +563,7 @@ a .t{
   text-align: center;
   background-color: #fff;
   position: relative;
+  right:auto;
   bottom:1px;
 }
 .guessulike{
@@ -615,15 +616,87 @@ a .t{
 .guessulikeCon{
   width:100%;
   float: left;
-  padding:0 .096rem;
+  padding:0 .055rem;
   box-sizing: border-box;
   .pro-list{
     list-style: none;
     padding:0;
     li{
-      padding:0 .096rem;
+      padding:0 .055rem;
       width:50%;
       box-sizing: border-box;
+      margin-bottom: .11rem;
+      float: left;
+      a{
+        display: block;
+        background: #fff;
+        img{
+          width:100%;
+          height:100%;
+        }
+      }
+      .info-bar{
+        padding:.0414rem .0552rem;
+        background-color: #fff;
+        position: relative;
+        .pro-title{
+          height:.42rem;
+          margin-bottom: .04rem;
+          overflow: hidden;
+        }
+        .e-price{
+          color:#e21d1d;
+          font-size: 0.16rem;
+          line-height: .19rem;
+          display: block;
+          padding-bottom: .03rem;
+        }
+      }
     }
+  }
+}
+.app-down{
+  width:100%;
+  a{
+    display: block;
+    img{
+      width:100%;
+    }
+  }
+}
+#footer{
+  margin-top:.132rem;
+  background-color: #fff;
+  text-align: center;
+  .wbox{
+    padding:0;
+    margin:0;
+    height:.53rem;
+    line-height: .53rem;
+    li{
+      list-style: none;
+      width:20%;
+      float: left;
+      position: relative;
+      a{
+        display: block;
+        font-size: .15rem;
+        color:#333;
+      }
+      span{
+        width:1px;
+        height:.15rem;
+        position: absolute;
+        margin:auto;
+        background-color: #ededed;
+        top:0;
+        right:0;
+        bottom:0;
+      }
+    }
+  }
+  .copyright{
+    padding: .055rem .16rem .41rem .16rem;
+    color:#909090;
   }
 }
